<resources>
    <string name="app_name_cfu">Course Followup</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="facebook_app_id">530775210395799</string>
    <string name="lang">en</string>
    <string name="about">Contact us</string>
    <string name="about_name">Name:</string>
    <string name="about_email">Email:</string>
    <string name="about_univ">Country:</string>
    <string name="dev1_name">Ahmed Ali Ahmed Alhammadi</string>
    <string name="dev2_name">Mohammed Ahmed Ba M3bed</string>
    <string name="dev1_email">a7madal7ammadi@gmail.com</string>
    <string name="dev2_email">H00207360@hct.ac.ae</string>
    <string name="dev1_univ">United Arab Emirates</string>
    <string name="dev2_univ">United Arab Emirates</string>
    <string name="new_">New</string>
    <string name="no_times">No Times</string>
    <string name="current_time">Time:</string>
    <string name="current_date">Date:</string>
    <string name="img_captured">I have image</string>
    <string name="vid_captured">I have video</string>
    <string name="text_captured">I have text</string>
    <string name="voice_captured">I have voice</string>
    <string name="cancel">Cancel</string>
    <string name="select_course">Select Course</string>
    <string name="select_color">Select Color</string>
    <string name="ok">Ok</string>
    <string name="select_Ttype">Select Task Type</string>
    <string name="complete">% Complete</string>
    <string name="task_progress">Task Progress: </string>
    <string name="once_on">Once On: </string>
    <string name="task_hw">Homework</string>
    <string name="task_ass">Assignment</string>
    <string name="task_rem">Reminder</string>
    <string name="task_rev">Revision</string>
    <string name="task_meet">Meeting</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="sat">Sa</string>
    <string name="sun">Su</string>
    <string name="mon">Mo</string>
    <string name="tue">Tu</string>
    <string name="wed">We</string>
    <string name="thu">Th</string>
    <string name="fri">Fr</string>
    <string name="voice">Voice</string>
    <string name="text">Text</string>
    <string name="video">Video</string>
    <string name="image">Image</string>
    <string name="category_dashboard">Dashboard</string>
    <string name="category_calender">Calender</string>
    <string name="category_classes">Courses</string>
    <string name="category_tasks">Tasks</string>
    <string name="category_notes">Notes</string>
    <string name="category_exams">Exams</string>
    <string name="category_semesters">Semesters</string>
    <string name="category_year">Academic Years</string>
    <string name="category_holidays">Holidays</string>
    <string name="category_search">Search</string>
    <string name="category_setting">Settings</string>
    <string name="category_people">People</string>
    <string name="category_technology">Technology</string>
    <string name="category_test">Testing</string>
    <string name="category_ar">عربي</string>
    <string name="category_en">English</string>
    <string name="delete_confirmation">Are you sure you want to delete?</string>
    <string name="delete_confirmation_title">Delete</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_successfully">Successfully Delete</string>
    <string name="holiday_add_subtitle">Add Holiday</string>
    <string name="holiday_edit_subtitle">Edit Holiday</string>
    <string name="holiday_add_successfully">Successfully add holiday</string>
    <string name="holiday_edit_successfully">Successfully edit holiday</string>
    <string name="holiday_name">Holiday Name</string>
    <string name="holiday_start_date_hint">Start Date</string>
    <string name="holiday_end_date_hint">End Date</string>
    <string name="dt_add_subtitle">Add Time</string>
    <string name="dt_edit_subtitle">Edit Time</string>
    <string name="dt_add_successfully">Successfully add Time</string>
    <string name="dt_edit_successfully">Successfully Edit Time</string>
    <string name="dt_start_time_hint">Start Time</string>
    <string name="dt_end_time_hint">End Time</string>
    <string name="dt_oneDate_hint">One Time Date</string>
    <string name="dt_daysOfWeek_hint">Days of week</string>
    <string name="dt_course_hint">Course name</string>
    <string name="dt_isRepeat">Is Repeat</string>
    <string name="course_add_subtitle">Add Course</string>
    <string name="course_edit_subtitle">Edit Course</string>
    <string name="course_add_successfully">Successfully add Course</string>
    <string name="course_edit_successfully">Successfully edit Course</string>
    <string name="course_name">Course Name</string>
    <string name="course_start_date_hint">Start Date</string>
    <string name="course_end_date_hint">End Date</string>
    <string name="course_seat_hint">Room</string>
    <string name="course_building_hint">Building</string>
    <string name="course_code_hint">Code</string>
    <string name="course_teacher_hint">Teacher</string>
    <string name="course_colorCode_hint">Color Code</string>
    <string name="course_times_hint">Course Times</string>
    <string name="year_add_subtitle">Add Academic Year</string>
    <string name="year_edit_subtitle">Edit Academic Year</string>
    <string name="year_add_successfully">Successfully add academic year</string>
    <string name="year_edit_successfully">Successfully edit academic year</string>
    <string name="year_name">Ex:(2014\2015)</string>
    <string name="year_start_date_hint">Start Date</string>
    <string name="year_end_date_hint">End Date</string>
    <string name="exam_add_subtitle">Add Exam</string>
    <string name="exam_edit_subtitle">Edit Exam</string>
    <string name="exam_add_successfully">Successfully add Exam</string>
    <string name="exam_edit_successfully">Successfully edit Exam</string>
    <string name="exam_course_name">Select Course</string>
    <string name="exam_start_date_hint">Start Time</string>
    <string name="exam_date_hint">Exam Date</string>
    <string name="exam_isResit">Is Resit</string>
    <string name="exam_seat_hint">seat</string>
    <string name="exam_room_hint">Room</string>
    <string name="exam_duration">Duration</string>
    <string name="exam_end_date_hint">End Time</string>
    <string name="task_add_subtitle">New Task</string>
    <string name="task_edit_subtitle">Edit Task</string>
    <string name="task_add_successfully">Successfully add Task</string>
    <string name="task_edit_successfully">Successfully edit Task</string>
    <string name="task_subject_hint">Subject</string>
    <string name="task_type_hint">Type</string>
    <string name="task_due_date_hint">Due Date</string>
    <string name="task_due_time_hint">Due Time</string>
    <string name="task_name">Task Name</string>
    <string name="task_detail_hint">Detail</string>
    <string name="note_add_subtitle">New Note</string>
    <string name="note_edit_subtitle">Edit Note</string>
    <string name="note_add_successfully">Successfully add Note</string>
    <string name="note_due_date_hint">Due Date</string>
    <string name="note_name">Note Name</string>
    <string name="note_detail_hint">Detail</string>
    <string name="note_edit_successfully">Successfully edit Note</string>
    <string name="semester_name">Semester Name</string>
    <string name="semester_start_date_hint">Start Date</string>
    <string name="semester_end_date_hint">End Date</string>
    <string name="semester_select_year_hint">Select Year</string>
    <string name="semester_add_subtitle">Add Semester</string>
    <string name="semester_edit_subtitle">Edit Semester</string>
    <string name="semester_add_successfully">Successfully add semester</string>
    <string name="semester_edit_successfully">Successfully edit semester</string>
    <string name="tab_current">Current</string>
    <string name="tab_past">Past</string>
    <string name="tab_all">All</string>
    <string name="font_fontFamily_medium">sans-serif</string>
    <string name="BR_GENERAL_001">Error in deleting</string>
    <string name="BR_GENERAL_002">You must be in the same course to edit times, Only colored times can be editted</string>
    <string name="BR_GENERAL_003">You must firstly select date</string>
    <string name="BR_HLD_001">Start date can\'t be less than end date</string>
    <string name="BR_HLD_002">Can\'t add holiday with period more than 30 days</string>
    <string name="BR_HLD_003">Holiday name already exists</string>
    <string name="BR_HLD_004">Holiday start and end date can\'t be null</string>
    <string name="BR_HLD_005">Holiday name can\'t be null</string>
    <string name="BR_HLD_006">This Holiday conflicts with other holidays</string>
    <string name="BR_YER_001">Start date can\'t be less than end date</string>
    <string name="BR_YER_002">Academic Year name already exists</string>
    <string name="BR_YER_003">Can\'t delete academic year have semesters, you must delete semesters first</string>
    <string name="BR_YER_004">Can\'t add academic year with period more than 400 days</string>
    <string name="BR_YER_005">Academic year start and end date can\'t be null</string>
    <string name="BR_YER_006">Academic year name can\'t be null</string>
    <string name="BR_YER_007">This Academic year conflicts with other Academic year</string>
    <string name="BR_SMR_001">Semester name already exists in this year</string>
    <string name="BR_SMR_002">Semester start date and end date must be within a year\'s start and end date</string>
    <string name="BR_SMR_003">Can\'t delete semester have a courses, you must delete courses before</string>
    <string name="BR_SMR_004">Start date can\'t be less than end date</string>
    <string name="BR_SMR_005">Semester start and end date can\'t be null</string>
    <string name="BR_SMR_006">Semester name can\'t be null</string>
    <string name="BR_SMR_007">Semester must be belong to a year</string>
    <string name="BR_SMR_008">This semester conflicts with other semesters</string>
    <string name="BR_CRS_001">Course name already exists</string>
    <string name="BR_CRS_002"></string>
    <string name="BR_CRS_003">Course start date and end date must be within a semester\'s start and end date</string>
    <string name="BR_CRS_004">Can\'t delete course have notes</string>
    <string name="BR_CRS_005">Can\'t delete course have tasks</string>
    <string name="BR_CRS_006">Can\'t delete course have exams</string>
    <string name="BR_CRS_007">Start date can\'t be less than end date</string>
    <string name="BR_CRS_008">Course start and end date can\'t be null</string>
    <string name="BR_CRS_009">Course name can\'t be null</string>
    <string name="BR_CRS_010">Course must be belong to a semester</string>
    <string name="BR_CRS_011">Please select a color</string>
    <string name="BR_CRS_012">This Course conflicts with other courses</string>
    <string name="BR_EXM_001">Exam start and end time can\'t be null</string>
    <string name="BR_EXM_002">Exam must be belong to a course</string>
    <string name="BR_EXM_003">Start date can\'t be less than end date</string>
    <string name="BR_EXM_004">This Exam conflicts with other exams</string>
    <string name="BR_TSK_001">Task name can\'t be empty</string>
    <string name="BR_TSK_002">Task name exists</string>
    <string name="BR_TSK_003">Task must have a type</string>
    <string name="BR_TSK_004">Task must belongs to a course</string>
    <string name="BR_TSK_005">Task must have a specified date</string>
    <string name="BR_DT_001">Start and End time can\'t be empty</string>
</resources>