<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout

        android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="vertical"
        android:background="@android:color/white">

        <LinearLayout
            android:id="@+id/flexible_space_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?colorPrimary"
            android:orientation="vertical"
            android:paddingBottom="16dp"
            android:paddingLeft="72dp"
            android:paddingRight="16dp"
            android:elevation="5dp"
            android:paddingTop="16dp">

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/tv_exam_course_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/exam_course_name"
                android:textCursorDrawable="@drawable/text_cursor"
                android:textSize="34sp"
                app:baseColor="@android:color/white"
                app:floatingLabel="highlight"
                app:maxCharacters="20"
                app:primaryColor="@color/colorAccent"
                app:singleLineEllipsis="true"
                android:focusable="false"/>

        </LinearLayout>
        <include  android:id="@+id/shadow_main_activity" layout="@layout/toolbar_shadow" />
        <ScrollView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbarStyle="outsideInset"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"

                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin">

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/tv_exam_seat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/exam_seat_hint"
                    app:iconLeft="@drawable/chair"
                    app:floatingLabel="highlight"
                    app:iconPadding="10dp" />
                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/tv_exam_room"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/exam_room_hint"
                    app:iconLeft="@drawable/room"
                    app:floatingLabel="highlight"
                    app:iconPadding="10dp" />

                <CheckBox
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/exam_isResit"
                    android:id="@+id/cb_exam_isResit"
                    android:checked="false"/>
                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/tv_exam_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/exam_date_hint"
                    app:iconLeft="@drawable/ic_today_white"
                    app:floatingLabel="highlight"
                    app:iconPadding="10dp" />
                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/tv_exam_startTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/exam_start_date_hint"
                    app:iconLeft="@drawable/ic_today_white"
                    app:floatingLabel="highlight"
                    app:iconPadding="10dp" />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/tv_exam_endTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/exam_end_date_hint"
                    app:iconLeft="@drawable/ic_today_white"
                    app:floatingLabel="highlight"
                    app:iconPadding="10dp" />



            </LinearLayout>
        </ScrollView>

    </LinearLayout>




</RelativeLayout>