<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@android:color/white">

        <LinearLayout
            android:id="@+id/flexible_space_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?colorPrimary"
            android:orientation="vertical"
            android:paddingBottom="16dp"
            android:paddingLeft="72dp"
            android:paddingRight="16dp"
            android:elevation="5dp"
            android:paddingTop="16dp">

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/tv_course_nameCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/course_name"
                android:textCursorDrawable="@drawable/text_cursor"
                android:textSize="34sp"
                app:baseColor="@android:color/white"
                app:floatingLabel="highlight"
                app:maxCharacters="20"
                app:primaryColor="@color/white"
                app:singleLineEllipsis="true" />

        </LinearLayout>

        <include
            android:id="@+id/shadow_main_activity"
            layout="@layout/toolbar_shadow" />

        <ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbarStyle="outsideInset">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"

                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin">


                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/tv_course_startDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/holiday_start_date_hint"
                    app:iconLeft="@drawable/ic_today_white"
                    app:floatingLabel="highlight"
                    app:iconPadding="10dp" />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/tv_course_endDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/holiday_end_date_hint"
                    app:iconLeft="@drawable/ic_today_white"
                    app:floatingLabel="highlight"
                    app:iconPadding="10dp" />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/tv_course_semmester"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/semester_name"
                    app:iconLeft="@drawable/ic_today_white"
                    app:floatingLabel="highlight"
                    app:iconPadding="10dp" />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/tv_course_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/course_code_hint"
                    app:iconLeft="@drawable/ic_today_white"
                    app:floatingLabel="highlight"
                    app:iconPadding="10dp" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">

                    <TextView
                        android:id="@+id/tv_course_color"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="5dp"
                        android:text="@string/course_colorCode_hint" />

                    <Button
                        android:id="@+id/btn_course_color"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="8dp"
                        android:background="@color/colorPrimary"
                        android:layout_margin="8dp" />
                </LinearLayout>

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/tv_course_building"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/course_building_hint"
                    app:iconLeft="@drawable/buil"
                    app:floatingLabel="highlight"
                    app:iconPadding="10dp" />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/tv_course_room"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/course_seat_hint"
                    app:iconLeft="@drawable/room"
                    app:floatingLabel="highlight"
                    app:iconPadding="10dp" />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/tv_course_teacher"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/course_teacher_hint"
                    app:iconLeft="@drawable/teacher"
                    app:floatingLabel="highlight"
                    app:iconPadding="10dp" />

                <Button
                    android:id="@+id/tv_course_times"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="8dp"
                    android:background="@color/colorPrimary"
                    android:layout_margin="8dp"
                    android:textColor="@color/white"
                    android:hint="@string/course_times_hint" />

                <android.support.v7.widget.CardView
                    android:id="@+id/course_inner_time_cardView"
                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    card_view:cardUseCompatPadding="true"
                    card_view:cardCornerRadius="0dp"
                    android:clickable="false"
                    android:layout_gravity="center_horizontal">
                <LinearLayout
                    android:id="@+id/ll_courseView_times"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@color/white">

                </LinearLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>
        </ScrollView>

    </LinearLayout>


</RelativeLayout>