<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout

        android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="vertical"
        android:background="@android:color/white">

            <LinearLayout
                android:id="@+id/flexible_space_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?colorPrimary"
                android:orientation="vertical"
                android:paddingBottom="16dp"
                android:paddingLeft="72dp"
                android:paddingRight="16dp"
                android:elevation="5dp"
                android:paddingTop="16dp">
            </LinearLayout>
            <include  android:id="@+id/shadow_main_activity" layout="@layout/toolbar_shadow" />
            <ScrollView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbarStyle="outsideInset"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"

                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin">

                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:id="@+id/emptytxt"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"/>

                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:id="@+id/tv_dt_startTime1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/dt_start_time_hint"
                        app:iconLeft="@drawable/ic_today_white"
                        app:floatingLabel="highlight"
                        app:iconPadding="10dp" />

                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:id="@+id/tv_dt_endTime1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/dt_end_time_hint"
                        app:iconLeft="@drawable/ic_today_white"
                        app:floatingLabel="highlight"
                        app:iconPadding="10dp" />
                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:id="@+id/tv_dt_daysOfWeek"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/dt_daysOfWeek_hint"
                        app:iconLeft="@drawable/ic_today_white"
                        app:floatingLabel="highlight"
                        app:iconPadding="10dp" />

                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:id="@+id/tv_dt_courseName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/dt_course_hint"
                        app:iconLeft="@drawable/ic_today_white"
                        app:floatingLabel="highlight"
                        app:iconPadding="10dp" />

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/cb_dt_isRepeat"
                        android:text="@string/dt_isRepeat"
                        android:focusable="true"
                        />

                </LinearLayout>
             </ScrollView>

    </LinearLayout>
</RelativeLayout>